@@ -39,8 +39,13 @@ Feature: Page level actions
     When I handle the alert
     Then I should be able to get the alert's message
 
-  @dev
   Scenario: Handling confirm popups
     Given I am on the static elements page
     When I handle the confirm
     Then I should be able to get the confirm's message
+
+  @dev
+  Scenario: Handling prompt popups
+    Given I am on the static elements page
+    When I handle the prompt
+    Then I should be able to get the message and default value
